# wannist

./: Cargo.toml  Dockerfile  README.md  cookie.template
.github/workflows/: release.yaml
cals/: f1_23.ics
src/: main.rs
