[package]
name = "wannist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.23", features = ["clock"] }
clap = { version = "4.1.8", features = ["derive"] }
ical = "0.8.0"
wsgg = { git = "https://github.com/Oreganon/wsgg.git", branch = "main" }
